# speckit_book_hackhathon

./: .gitignore  README.md  package-lock.json
.gemini/: settings.json
.gemini/commands/: sp.constitution.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
history/prompts/001-ros2-digital-twin/: 1-digital-twin-ros2-spec.spec.prompt.md  2-digital-twin-ros2-plan.plan.prompt.md  3-digital-twin-ros2-plan-execution.plan.prompt.md  4-digital-twin-ros2-tasks.tasks.prompt.md  5-digital-twin-ros2-initial-setup.green.prompt.md  5-digital-twin-ros2-plan.plan.prompt.md  6-generate-tasks-for-digital-twin-module.tasks.prompt.md
history/prompts/001-ros2-learning-module/: 1-create-implementation-plan-for-ros-2-module.plan.prompt.md  2-generate-implementation-tasks-for-ros-2-module.tasks.prompt.md
history/prompts/004-vla-module/: 16-implement-vla-module.green.prompt.md
history/prompts/constitution/: 2-initial-project-constitution-setup.constitution.prompt.md  3-amend-constitution-to-v2.0.0.constitution.prompt.md
my-website/: docusaurus.config.js  package-lock.json  sidebars.js
my-website/src/pages/: index.js
my-website/src/ros2_packages/digital_twin_gazebo/: CMakeLists.txt  package.xml
my-website/src/ros2_packages/humanoid_robot_description/: CMakeLists.txt  package.xml
specs/001-ros2-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-learning-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla-module/: tasks.md
(+40 files in other folders)
